# solar-conflux

./: LICENSE  README.md  import.sh
abilities/: a.txt  b.txt  spago.dhall
abilities/src/: Main.purs
bash/: README.md
bash/mottainai-p2p-generator/: effects.md  generate.sh
bash/uptimes/: uptimes.sh
bug/: packages.dhall  spago.dhall
compose/src/: Compose.purs
dart/: README.md
dart/freeform-gradient/: README.md  pubspec.yaml
ecs/: package.json  tsconfig.json
ecs/src/: Types.js  Types.purs
elm/: README.md
elm/todolist/: README.md  elm-analyse.json  elmapp.config.js
existentials-blog/src/: Exists.purs
existentials/src/: Main.purs
fsharp/: README.md
fsharp/todolist-api/: .gitignore  README.md  paket.dependencies  paket.references  suaveTodoApi.fsproj
fsharp/ygosim/: .all-contributorsrc  LICENSE  README.md  paket.dependencies  ygosim.fsproj
gadts/: spago.dhall
haskell/: README.md
haskell/nihil/: .ghci  .gitignore  CHANGELOG.md  flake.nix  fourmolu.yaml  nihil.cabal
haskell/nihil/idea/: elab.waow  example.waow  html_old.waow  main.waow  prelude.waow  smol.waow  syntax.waow
haskell/nihil/idea/prelude/: bool.waow  default.waow  document.waow  fs.waow  html.waow  list.waow  panic.waow  scope.waow  sitemap.waow  text.waow  xml.waow
haskell/nihil/src/: Main.hs
haskell/nihil/src/Nihil/: Cst.hs  Error.hs  Parser.hs  Server.hs  Utils.hs
haskell/nihil/src/Nihil/Ast/: Lifecycle.hs  State.hs  Term.hs  Type.hs
haskell/nihil/src/Nihil/Compiler/: Ast.hs  Elab.hs  Gen.hs  Lifecycle.hs  Monad.hs  Resolve.hs  Term.hs
haskell/nihil/src/Nihil/Cst/: Base.hs  Expr.hs  Module.hs  Type.hs
haskell/nihil/src/Nihil/Parser/: Combinators.hs  Core.hs  Expr.hs  Module.hs  Notation.hs  Symbols.hs  Type.hs
haskell/nihil/src/Nihil/Server/: Diagnostics.hs  Lifecycle.hs  Name.hs  SemanticTokens.hs  State.hs
haskell/nihil/vim/ftdetect/: nihil.vim
haskell/nihil/vim/ftplugin/: nihil.lua
haskell/nihil/vim/lsp/: nihil.lua
haskell/nihil/vim/plugin/: nihil.lua
idris/learning/: README.md  sandbox.ipkg
javascript/: README.md
javascript/banconomania/: README.md  index.html  style.css
javascript/clever-dots/: README.md  game.js  index.html  population.js
javascript/linear-regression/: README.md  index.html
javascript/mongy/: README.md  app.js  package-lock.json  package.json
javascript/omcb-server-clocks/: data.txt  script.js
javascript/quizizz-hack/: README.md  entry.js  file.json  index.html  index.js  package.json  pnpm-lock.yaml  style.css
javascript/ultra32/: .gitignore  README.md  app.js  package-lock.json  package.json
lean/learning/: Main.lean  README.md  lakefile.lean
lua/: README.md
lua/prescient-trains/: .gitignore  .neoconf.json  control.lua  data.lua  info.json  settings_.lua
lune/src/: Handle.purs  Main.purs
maps/src/: Map.purs
odin/metafurl/: .gitignore  shell.nix
odin/sdl-opengl-rendering/: README.md  flake.nix
odin/tunnels/: shell.nix  tunnels.odin
proofs/src/: Main.purs  ValueLevelNaturals.purs
purescript/: README.md
purescript/abilities/: README.md
purescript/canopy/: README.md  spago.dhall
purescript/compose/: README.md
purescript/ecs/: README.md  pnpm-lock.yaml  spago.dhall
purescript/existentials-blog/: spago.dhall
purescript/factorio-throughput/: .gitignore  build.js  package.json  packages.dhall  pnpm-lock.yaml  spago.dhall
purescript/free/: README.md  spago.dhall
purescript/kombinators/: build.js  package.json  packages.dhall  pnpm-lock.yaml  spago.dhall  tsconfig.json
purescript/lambda-calculus/: spago.dhall
purescript/lunarline/: idea  spago.dhall
purescript/lune/: spago.dhall
purescript/maps/: packages.dhall  spago.dhall
purescript/proofs/: spago.dhall
purescript/purebird/: build.js  package.json  packages.dhall  pnpm-lock.yaml  spago.dhall
purescript/purpleflow/: spago.dhall  todo
purescript/reverse-state/: LICENSE  README.md  spago.dhall
purescript/run-supply/: README.md  bower.json  package.json  spago.dhall  spago.test.dhall
purescript/slice/: .gitignore  package.json  packages.dhall  pnpm-lock.yaml  spago.dhall
purescript/sliding-windows/: .purs-repl  spago.yaml
purescript/sprint/: spago.dhall
purescript/strategy/: spago.dhall
purescript/switcheroo/: flake.nix
purescript/thumbor/: LICENSE  README.md  package.json
purescript/typelevel/: README.md  spago.dhall
python/: README.md
python/denoising/: .gitignore  Main.ipynb  flake.nix
python/github-username-change/: README.md  rename.py
python/hypergeometric/: engines.toml  main.py  shell.nix
python/tram-stat-problem/: main.py  shell.nix
rust/shaderfurl/: .gitignore  Cargo.toml  flake.nix  rustfmt.toml  shell.nix
sprint/src/: Main.purs  Sprint.purs
streams/: spago.dhall
streams/src/: Main.purs
typelevel/src/: Ast.purs  Num.purs  Ordering.purs  Term.purs
typescript/: README.md
typescript/fased/: .gitignore  index.html
typescript/fourjs/: README.md  app.js  app.ts  package-lock.json  package.json
typescript/globalbot/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/loopover/: README.md  package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.json
typescript/loopover-leaderboards/: README.md  package.json  pnpm-lock.yaml  preact.config.js
typescript/lunardash/: pnpm-lock.yaml
typescript/monadic/: LICENSE  README.md  package.json
typescript/monorepo-template/: .gitignore  .prettierignore  .releaserc.json  LICENSE  package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.json
typescript/multiplayer-backend/: README.md  config.ts  firebase-admin.json  nodemon.json  package-lock.json  package.json  tsconfig.json
typescript/og-website/: README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
typescript/option/: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.json
typescript/pleix-frontend/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
typescript/simio-client/: README.md  angular.json  package-lock.json  package.json
typescript/translucid/: .gitignore  QuickServer.js  app.ts  (+10 more)
(+559 files in other folders)
