cabal-version:      3.0

name:               nihil
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             prescientmoon
maintainer:         git@moonythm.dev
category:           Language
extra-doc-files:    CHANGELOG.md
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nihil
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src

    default-language: GHC2024
    default-extensions:
        BlockArguments,
        UnicodeSyntax,
        DuplicateRecordFields,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedStrings

    other-modules:
        Nihil.Cst,
        Nihil.Cst.Base,
        Nihil.Cst.Type,
        Nihil.Cst.Expr,
        Nihil.Cst.Module,
        Nihil.Parser.Core,
        Nihil.Parser.Type,
        Nihil.Parser.Expr,
        Nihil.Parser.Module

    build-depends:
        base           ^>=4.20.0.0,
        relude         ^>=1.2.0.0,
        optics         ^>=0.4.2.0,
        optics-core    ^>=0.4.1.0,
        megaparsec     ^>=9.7.0,
        pretty-simple  ^>=4.1.3.0,

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
